# autochrome

./: .gitignore  CHANGELOG.md  README.md  colorchecker.nknc  colorchecker.py  input.exr  levenberg_marquardt.py  portra_curves.exr  pyproject.toml
autochrome/: __init__.py  __main__.py  storage.py  update.py
autochrome/api/: data.py  engine.py  path.py
autochrome/api/tasks/: conversion.py  emulsion.py  ggx.py  grain.py  halation.py  jakob.py  lut.coeff  model.npy  mst_plus_plus.py  opencl.py  reproject.py  spectral.py
autochrome/api/tasks/cl/: emulsion.cl  ggx.cl  grain.cl  halation.cl  jakob.cl  rand.cl  spec.cl  starburst.cl
autochrome/cli/: app.py
autochrome/data/: chromaticity_coordinates.py  color_matching_functions.py  illuminants.py
autochrome/gui/: app.py  parameters.py  settings.py  viewer.py
autochrome/resources/curves/: fujifilm_superia_xtra_800.json  fujifilm_superia_xtra_800.py  kodak_ektachrome_100.json  kodak_ektachrome_100.py  kodak_portra_800.json  kodak_portra_800.py
autochrome/utils/: ciexyz.py  ciexyz_1964.py  color.py  ocio.py  timing.py
tests/: test.py  test_emulsion.py  test_halation.py  test_interval.py  test_jakob.py  test_ocio.py  test_spectral.py  test_spectral_recovery.py
tests_gui/: app.py  parameters.py  settings.py  viewer.py
