[project]
name = "autochrome"
description = "Filmic Emulsion for VFX"
version = "0.0.1"
authors = [
    {name = "Beat Reichenbach"}
]
dependencies = [
#    "qt-extensions @ https://github.com/beatreichenbach/qt-extensions/archive/refs/heads/main.zip",
#    "PySide2",
#    "numpy",
#    "pyopencl",
#    "torch",
#    "torchvision",
#    "opencolorio",
#    "opencv-python-headless",
#    "einops",
]
requires-python = ">=3.9, <3.11"
license = {text = "MIT"}
readme = "README.md"

[project.optional-dependencies]
dev = [
    "python-semantic-release",
    "black"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autochrome*"]

[tool.setuptools.package-data]
autochrome = ["**/*.cl"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.semantic_release]
version_variable = "autochrome/__init__.py:__version__"
branch = "main"
upload_to_pypi = false
upload_to_repository = false
upload_to_release = false
version_toml = "pyproject.toml:project.version"
#build_command = "python -m build --sdist --wheel"

[tool.black]
skip-string-normalization = true
